# ski

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/ski/: evaluator.hpp  parser.hpp  term.hpp
src/: evaluator.cpp  main.cpp  parser.cpp  term.cpp
tests/: test_main.cpp
